# pep440-rs

./: .gitignore  Cargo.toml  Changelog.md  Readme.md  post.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
python/: Readme.md
python/pep440_rs/: __init__.pyi
src/: compare.rs  lib.rs  parse.rs  types.rs  version.rs  version_specifier.rs
src/version/: tests.rs
test/: test_python.py
