[package]
name = "pep440_rs"
version = "0.4.0"
description = "A library for python version numbers and specifiers, implementing PEP 440"
edition = "2021"
include = ["/src", "Changelog.md", "License-Apache", "License-BSD", "Readme.md", "pyproject.toml"]
# Same license as pypa/packaging where the tests are from
license = "Apache-2.0 OR BSD-2-Clause"
repository = "https://github.com/konstin/pep440-rs"
readme = "Readme.md"

[lib]
name = "pep440_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = { version = "1.19.0" }
pyo3 = { version = "0.20.0", optional = true, features = ["extension-module", "abi3-py37"] }
regex = { version = "1.10.2" }
serde = { version = "1.0.193", features = ["derive"], optional = true }
tracing = { version = "0.1.40", optional = true }
unicode-width = { version = "0.1.11" }

[dev-dependencies]
indoc = "2.0.4"
