[package]
name = "pep440_rs"
version = "0.6.6"
description = "A library for python version numbers and specifiers, implementing PEP 440"
edition = "2021"
include = ["/src", "Changelog.md", "License-Apache", "License-BSD", "Readme.md", "pyproject.toml"]
# Same license as pypa/packaging where the tests are from
license = "Apache-2.0 OR BSD-2-Clause"
repository = "https://github.com/konstin/pep440-rs"
readme = "Readme.md"

[lib]
name = "pep440_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = { version = "1.19.0" }
pubgrub = { version = "0.2.1", optional = true }
pyo3 = { version = "0.22", optional = true, features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0.200", features = ["derive"], optional = true }
rkyv = { version = "0.7.44", features = ["strict", "validation"], optional = true }
tracing = { version = "0.1.40", optional = true }
unicode-width = { version = "0.1.12" }
unscanny = { version = "0.1.0" }

[dev-dependencies]
indoc = { version = "2.0.5" }
