[package]
name = "pep440_rs"
version = "0.7.3"
description = "A library for python version numbers and specifiers, implementing PEP 440"
edition = "2021"
include = ["/src", "Changelog.md", "License-Apache", "License-BSD", "Readme.md", "pyproject.toml"]
# Same license as pypa/packaging where the tests are from
license = "Apache-2.0 OR BSD-2-Clause"
repository = "https://github.com/konstin/pep440-rs"
readme = "Readme.md"

[lib]
name = "pep440_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = { version = "1.20.2" }
serde = { version = "1.0.210", features = ["derive"] }
rkyv = { version = "0.8.9", optional = true }
tracing = { version = "0.1.40", optional = true }
unicode-width = { version = "0.2.0" }
unscanny = { version = "0.1.0" }
# Adds conversions from [`VersionSpecifiers`] to [`version_ranges::Ranges`]
version-ranges = { version = "0.1.1", optional = true }

[dev-dependencies]
indoc = { version = "2.0.5" }
