[project]
name = "pep440_rs"
readme = "python/Readme.md"

[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3"]
python-source = "python"
module-name = "pep440_rs._pep440_rs"

[tool.ruff.per-file-ignores]
"python/pep440_rs/__init__.py" = ["F403", "F405"]
