[project]
name = "pep440_rs"
version = "0.6.5"
readme = "python/Readme.md"

[build-system]
requires = ["maturin>=1.0.0,<2.0.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3"]
python-source = "python"
module-name = "pep440_rs._pep440_rs"

[tool.ruff.lint.per-file-ignores]
"python/pep440_rs/__init__.py" = ["F403", "F405"]
